force-app/main/default/objects/ElementData__c/ElementData__c.object-meta.xml
<CustomObject>
    <label>Element Data</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>