force-app/main/default/objects/ElementData__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Variable Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>