force-app/main/default/objects/ElementData__c/fields/Subrule__c.field-meta.xml
<CustomField>
    <fullName>Subrule__c</fullName>
    <label>Subrule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>