force-app/main/default/objects/ElementData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Description__c</columns>
    <columns>Value__c</columns>
    <columns>Obsolete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>